fix: 불변 리스트로 변경